--- a/editor/src/styles/styles.css
+++ b/editor/src/styles/styles.css
@@ -255,6 +255,12 @@ header {
 }
 
 /* Editor and output container */
+#editor {
+	width: 100%;
+	height: 90vh;
+	border: 1px solid #ccc;
+}
+
 .editor-container {
     display: flex;
     flex-direction: column;
